Añadidas nuevas rutas a api y cambios sobre excepciones y recurrencias
